# Distributed_Process

./: INSTRUCTIONS.txt  LICENSE  README.md  example.cabal  runTest.sh  stack.yaml
src/: Main.hs
