name:                example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/deepakkapiswe/CloudHaskellBeginner#readme
license:             BSD3
license-file:        LICENSE
author:              Deepak Kapiswe
maintainer:          deepakkapiswe@gmail.com
copyright:           2017 Deepak Kapiswe
category:            Cloud
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , distributed-process-simplelocalnet
                     , distributed-process
                     , random
                     , time 
                     , vector
                     , vector-binary-instances
                     , primitive
